# TruncatedNormalCPP

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  README.md  aclocal.m4  config.status  configure  configure.ac  libtool
doc/: _botev_algorithm_8h.html  _botev_algorithm_8h_source.html  _digital_net_8h.html  _digital_net_8h_source.html  _m_c_q_m_c_integration_8h.html  _m_c_q_m_c_integration_8h_source.html  _truncated_normal_8h.html  _truncated_normal_8h_source.html  annotated.html  class_m_c_q_m_c_integration_1_1_botev_algorithm.html  class_m_c_q_m_c_integration_1_1_digital_net.html  class_m_c_q_m_c_integration_1_1_digital_net_3_01uint64__t_01_4.html  class_m_c_q_m_c_integration_1_1_online_variance.html  classes.html  dir_36a545b839869b4fd4555eb4fee95bff.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen.cfg  files.html  functions.html  functions_enum.html  functions_eval.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  index.html  mainpage.txt  mainpage_8txt.html  menudata.js  namespace_m_c_q_m_c_integration.html  namespacemembers.html  namespacemembers_func.html  namespaces.html  struct_m_c_q_m_c_integration_1_1_m_c_q_m_c_result.html  struct_m_c_q_m_c_integration_1_1_truncated_normal_result.html
docs/: _botev_algorithm_8h.html  _botev_algorithm_8h_source.html  _digital_net_8h.html  _digital_net_8h_source.html  _m_c_q_m_c_integration_8h.html  _m_c_q_m_c_integration_8h_source.html  _truncated_normal_8h.html  _truncated_normal_8h_source.html  annotated.html  class_m_c_q_m_c_integration_1_1_botev_algorithm.html  class_m_c_q_m_c_integration_1_1_digital_net.html  class_m_c_q_m_c_integration_1_1_digital_net_3_01uint64__t_01_4.html  class_m_c_q_m_c_integration_1_1_online_variance.html  classes.html  dir_36a545b839869b4fd4555eb4fee95bff.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  index.html  mainpage_8txt.html  namespace_m_c_q_m_c_integration.html  namespacemembers.html  namespacemembers_enum.html  namespacemembers_eval.html  namespacemembers_func.html  namespaces.html  struct_m_c_q_m_c_integration_1_1_m_c_q_m_c_result.html  struct_m_c_q_m_c_integration_1_1_truncated_normal_result.html
docs/ja/: Makefile  example-qmc.html  example-qmc.md  index.html  index.md
doxygen/: Makefile.am  Makefile.in  doxygen.cfg  mainpage.txt
example/: Makefile.am  Makefile.in  mc_example.cpp  qmc_example.cpp
html/: _botev_algorithm_8h.html  _botev_algorithm_8h_source.html  _digital_net_8h.html  _digital_net_8h_source.html  _m_c_q_m_c_integration_8h.html  _m_c_q_m_c_integration_8h_source.html  _truncated_normal_8h.html  _truncated_normal_8h_source.html  annotated.html  class_m_c_q_m_c_integration_1_1_botev_algorithm.html  class_m_c_q_m_c_integration_1_1_digital_net.html  class_m_c_q_m_c_integration_1_1_digital_net_3_01uint64__t_01_4.html  class_m_c_q_m_c_integration_1_1_online_variance.html  classes.html  dir_36a545b839869b4fd4555eb4fee95bff.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_enum.html  functions_eval.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  index.html  mainpage_8txt.html  menudata.js  namespace_m_c_q_m_c_integration.html  namespacemembers.html  namespacemembers_enum.html  namespacemembers_eval.html  namespacemembers_func.html  namespaces.html  struct_m_c_q_m_c_integration_1_1_m_c_q_m_c_result.html  struct_m_c_q_m_c_integration_1_1_truncated_normal_result.html
include/: Makefile.am  Makefile.in
include/MCQMCIntegration/: BotevAlgorithm.h  DigitalNet.h  MCQMCIntegration.h  TruncatedNormal.h
src/: BotevAlgorithm.cpp  DigitalNet.cpp  MCQMCIntegration.cpp  Makefile.am  Makefile.in  TruncatedNormal.cpp  config.h  config.h.in  digital.h  nxlw_data.cpp  pnorm.cpp  sample.cpp  solw_data.cpp
